# PulseOfTruth

./: README.md  analysis.py  copy_files.py  create_dataset.py  main.py  pyproject.toml  train.py
model/: deepfake_detector_model.joblib
output/dataset/: fake.csv  real.csv
output/dataset_subset/: fake.csv  real.csv
output/scores/: fake.csv  real.csv
